refactor: change dtos and models to embed audit Information (#62)
* feat: enhance auditor implementation to retrieve user ID from JWT token

* feat: integrate audit fields into social and travel models, update repositories and services to utilize audit information

* refactor: change dtos and models to embed audit Information

* refactor: remove unused Jackson configuration and deserializer for SubsectionType; update SubsectionType enum and related DTOs for consistency

* refactor: update method names in SubsectionRepository and SubsectionServiceImpl for consistency

* feat: add method to retrieve authenticated user ID in UserUtil

* refactor: simplify user endpoint constants and update UserController mappings for clarity

* refactor: update SubsectionUpdateRequestDto to use uppercase names for subsection types

* refactor: streamline imports and enhance self-referencing in UserInfoServiceImpl and UserPreferencesServiceImpl

* refactor: replace AuditDto with AuditTimeDto and update related classes for consistency

* refactor: replace logger with Lombok's Slf4j for cleaner logging in multiple services and controllers

* refactor: update sorting parameters in controllers to use audit fields and enhance AuditDto with created and modified timestamps

* refactor: update user registration endpoint to allow POST requests

* refactor: standardize profile image handling across user DTOs and models

* refactor: enhance authentication flow and user profile management with updated services and types

* refactor: update regex for image URL validation and remove unnecessary @Embedded annotations in DTOs

* refactor: add null check for authenticated user in admin role verification

* refactor: simplify getAuthenticatedUserId method by removing unnecessary null check

* refactor: implement middleware for authentication and add logout functionality in profile header